Support for addModules in all tasks